# cNova

./: .gitignore  CMakeLists.txt  README.md  cNova_lex.h  input_stream.cpp  input_stream.h  lexical_test.cc  main.cc  main.cpp  parser.cc  util_functions.cpp
clib/: dictionary_lib.cc  libs.h  string_lib.cc
data/: gramma.txt  input.txt  input_T.txt
data/LR/: input_v.txt
data/script/: rotate_matrix.nova
doc/: first_set.md  gramma.md  gramma_modified.md  lexical.md
examples/: calc.cc  gcd.cc  quick_power.cc  rotate_matrix.cc  word_counter.cc
gramma/: LR_IO.cc  LR_IO.h  LR_closure.hpp  LR_def.h  LR_first.cc  LR_first.h  LR_generator.cc  LR_generator.h  LR_io.cc  LR_io.h  LR_io.hpp
io/: input_stream.cc  input_stream.h  io_exceptions.cc  io_exceptions.h
lexical/: Novalex.h  cNova_lex.h  constant.h  dfa.h  input_stream.cpp  keyword.h  lexical.cc  lexical_converter.cc  lexical_converter.h  lexical_definition.h  lexical_exceptions.cc  lexical_exceptions.h  main.cpp  operator.h  token.h  tokens.h
parser/: operators.cc  parser.cc  parser.cpp  parser.h  parser_exceptions.cc  parser_exceptions.h
script/: calc.nova  quick_power.nova  word_counter.nova
src/examples/: CMakeLists.txt
src/examples/calc/: calc.cc
src/examples/quick_power/: quick_power.cc
src/examples/rotate_matrix/: rotate_matrix.cc
src/examples/word_counter/: CMakeLists.txt  word_counter.cc
src/libs/: CMakeLists.txt  cnova.h
src/libs/clib/: libs.h  math_lib.cc  string_lib.cc
src/libs/gramma/: defines.h  generator.cc  generator.h  io.cc  io.h  readme.md
src/libs/io/: input_stream.cc  io_exceptions.cc
src/libs/lexical/: lexical_converter.cc  lexical_definition.h  lexical_exceptions.cc
src/libs/parser/: operators.h  parser_exceptions.h  types.cc  types.h
src/libs/vm/: cnova_interpreter.cc  cnova_interpreter.h  runtime_exception.h
test/: bugs.txt  lexical_test.cc  outcome.txt  parser_test.cc  single_judge.txt  test.txt  test_LR_io.cc  test_keyword.txt  test_number.txt  test_symbol.txt  test_variables.txt
test/test_data/gramma/LR_io/: test1.txt  test_IO_result.txt
test/test_data/lexical/: bugs.txt  exception.txt  outcome.txt  single_judge.txt  test_keyword.txt  test_number.txt  test_string.txt  test_symbol.txt  test_variables.txt
test/test_data/parser/: input.txt
vm/: cnova_interpreter.cc  cnova_interpreter.h  cnova_self.h  cnova_vm.cc  cnova_vm.h
